--- a/ipam/backend/package.json
+++ b/ipam/backend/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,10 +16,12 @@
     "cros": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "i": "^0.3.7",
     "imap-simple": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mailparser": "^3.6.9",
     "mongodb": "^6.5.0",
-    "node-imap": "^0.9.6"
+    "node-imap": "^0.9.6",
+    "npm": "^10.5.0"
   }
 }
