--- a/ipam/backend/package.json
+++ b/ipam/backend/package.json
@@ -12,15 +12,18 @@
   "dependencies": {
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
+    "bull": "^4.12.2",
     "cors": "^2.8.5",
     "cros": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "i": "^0.3.7",
     "imap-simple": "^5.1.0",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "mailparser": "^3.6.9",
     "mongodb": "^6.5.0",
+    "node-cron": "^3.0.3",
     "node-imap": "^0.9.6",
     "npm": "^10.5.0"
   }
